# latentspace

./: AGENTS.md  Cargo.toml  README.md
docs/plans/: 2026-02-15-debug-overlay-design.md  2026-02-15-latentspace-game-design.md  2026-02-15-latentspace-implementation.md  2026-02-20-lua-scripting-design.md  2026-02-20-lua-scripting-implementation.md
prompts/: aggressive.txt  defensive.txt  demo-duelist.txt  demo-hunter.txt
scripts/: aggressive.lua  defensive.lua
src/: lib.rs  main.rs
src/ai/: AGENTS.md  client.rs  history.rs  mod.rs  protocol.rs  script.rs  validate.rs
src/canvas/: AGENTS.md  effects.rs  mod.rs  renderer.rs  sprites.rs
src/game/: AGENTS.md  arena.rs  combat.rs  fog.rs  mod.rs  projectile.rs  ship.rs  simulation.rs
src/ui/: AGENTS.md  debug_overlay.rs  hud.rs  layout.rs  marquee.rs  mod.rs  startup_overlay.rs
tests/: integration.rs  lua_scripts.rs
