[package]
name = "latentspace"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
mlua = { version = "0.10", features = ["lua54", "serialize", "vendored"] }
